Fix dark mode for header

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -3,11 +3,11 @@
 	--background-colour: #ffffff;
     --ui-green: #66D575;
 }
-/* 
+
 @media (prefers-color-scheme: dark) {
 	:root {
 		--text-colour: #ffffff;
-		--background-colour: #000000;
+		--background-colour: #070e06;
         --ui-green: #204325;
 	}
 
@@ -20,4 +20,4 @@
 body {
     height: 100vh;
     background-color: var(--background-colour);
-} */
+}
